[gd_scene load_steps=4 format=3 uid="uid://ci6or47dto3m5"]

[ext_resource type="PackedScene" uid="uid://br5kr5h0352ku" path="res://Scenes/Turrets/turret_container.tscn" id="1_arrrv"]
[ext_resource type="Script" path="res://Scenes/Turrets/Strawberry Artillery/strawberry_artillery_container.gd" id="2_krrmc"]
[ext_resource type="PackedScene" uid="uid://d1vn7hvgt5eh" path="res://Models/Turrets/Strawberry Artillery/strawberry_artillery.tscn" id="3_n0lgv"]

[node name="StrawberryArtilleryContainer" instance=ExtResource("1_arrrv")]
script = ExtResource("2_krrmc")

[node name="StrawberryArtillery" parent="." index="0" instance=ExtResource("3_n0lgv")]

[connection signal="area_entered" from="StrawberryArtillery" to="." method="_on_strawberry_artillery_area_entered"]
[connection signal="area_exited" from="StrawberryArtillery" to="." method="_on_strawberry_artillery_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
